--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ table {
 /*Projeto principal*/
 
 header {
-    background-color: black;
+    background-color: #131313;
     height: 80px;
     width: 100%;
 }
@@ -81,7 +81,7 @@ header {
 }
 
 #menu ul li {
-    color: #ffffff;
+    color: #86817e;
     float: right;
     font-family: "Special Gothic Condensed One", sans-serif;
     font-weight: 400;
@@ -92,15 +92,40 @@ header {
     width: 50%;
 }
 
+#menu ul li a {
+    text-decoration: none;
+}
+
+#menu ul li a:visited {
+    color: #86817e;
+    text-decoration: none;
+}
+
+#menu ul li a:hover {
+    color: rgb(255, 102, 0) !important;
+    cursor: pointer;
+}
+
+#menu ul li .atual {
+    color: white !important;
+}
+
+body {
+    background-color: #0A0A0A;
+}
+
 main {
     width: 100%;
     height: 1000px;
-    background-color: #ff8c00;
-    background-image: linear-gradient(#000000, #ff8c00);
+    background-color: #0A0A0A;
 }
 
 #caixa-pergunta {
+    display: flex;
+    justify-content: center;
     height: 500px;
+    margin-top: 20px;
+    width: 100%;
 }
 
 #logo-ia {
@@ -110,54 +135,91 @@ main {
     background-size: 100%;
     float: left;
     height: 350px;
-    width: 30%;
+    width: 20%;
 }
 
 #pergunta-ia {
     float: left;
-    height: 350px;
-    width: 70%;
+    height: 380px;
+    width: 900px;
 }
 
 #pergunta-ia form {
-    width: 80%;
     margin: 0 auto;
     margin-top: 40px;
+    width: 80%;
+}
+
+#pergunta-ia form input {
+    font-weight: lighter;
+    margin: 10px;
+}
+
+#pergunta-ia form input:hover {
+    cursor: pointer;
+    font-weight: bold;
+}
+
+#buttons {
+    display: flex;
+    justify-content: center;
 }
 
 #text-pergunta {
+    background-color: #1E1E1E;
+    border: none;
+    color: white;
     resize: none;
+    padding: 25px;
 }
 
 #btn-pesquisar {
     background-color: darkgreen;
-    border-radius: 30px;
+    border: none;
+    border-radius: 10px;
     color: white;
+    font-family: "Special Gothic Condensed One", sans-serif;
+    font-size: 1.2em;
+    font-weight: 400;
     height: 35px;
     width: 150px;
 }
 
 #btn-limpar {
     background-color: darkred;
-    border-radius: 30px;
+    border: none;
+    border-radius: 10px;
     color: white;
+    font-family: "Special Gothic Condensed One", sans-serif;
+    font-size: 1.2em;
+    font-weight: 400;
     height: 35px;
     width: 150px;
 }
 
-#caixa-resposta {
-    height: 160px;
-}
-
 #text-resposta {
+    background-color: #1E1E1E;
+    border: none;
+    color: white;
     display: block;
     margin-left: auto;
     margin-right: auto;
     resize: none;
+    padding: 25px;
 }
 
 footer {
-    width: 100%;
-    height: 50px;
+    align-items: center;
     background-color: black;
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    width: 100%;
+}
+
+footer p {
+    color: white;
+    display: flex;
+    font-family: "Special Gothic Condensed One", sans-serif;    
+    font-style: normal;
 }
