--- a/css/translate.css
+++ b/css/translate.css
@@ -157,7 +157,7 @@ main {
 }
 
 #lang option:hover {
-    background-color: rgb(187, 76, 2);;
+    background-color: rgb(187, 76, 2);
 }
 
 #logo-ia {
