--- a/css/translate.css
+++ b/css/translate.css
@@ -142,8 +142,8 @@ main {
 }
 
 #sel-menu select {
-    background: rgb(255, 94, 0);
-    border: 2px solid rgb(255, 94, 0);
+    background: rgb(255, 102, 0);
+    border: 2px solid rgb(255, 102, 0);
     color: white;
     font-family: "Special Gothic Condensed One", sans-serif;
     font-weight: 400;
@@ -156,18 +156,24 @@ main {
   background: rgb(255, 102, 0);
 }
 
-#lang option:hover {
-    background-color: rgb(187, 76, 2);
-}
-
 #logo-ia {
-    background-image: url(../imagens/robo.gif);
+    background-image: url(../imagens/translators_corrected.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
+    display: flex;
     float: left;
-    height: 350px;
+    height: 380px;
+    justify-content: center;
+    margin-top: 150px;
     width: 20%;
+}
+
+#logo-ia label {
+    color: white;
+    font-family: "Special Gothic Condensed One", sans-serif;
+    font-size: 2em;
+    font-weight: 400;
 }
 
 #pergunta-ia {
@@ -200,6 +206,7 @@ main {
 #text-pergunta {
     background-color: #1E1E1E;
     border: none;
+    border-radius: 10px;
     color: white;
     resize: none;
     padding: 25px;
@@ -217,6 +224,10 @@ main {
     width: 150px;
 }
 
+#btn-pesquisar:hover {
+    background-color: rgb(0, 68, 0);
+}
+
 #btn-limpar {
     background-color: darkred;
     border: none;
@@ -232,6 +243,7 @@ main {
 #text-resposta {
     background-color: #1E1E1E;
     border: none;
+    border-radius: 10px;
     color: white;
     display: block;
     margin-left: auto;
